--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -48,8 +48,24 @@ median_Steps
 ```
 
 ## What is the average daily activity pattern?
+* Use aggregate function to compute the average number of steps taken every 5-minute interval
+* use plot to plot time series with type = "l"
+* use which.max function to get the index of the maximum average number of steps 
+```{r intervalSteps}
+interval.steps <- aggregate(steps ~ interval, DFactivity, mean, na.rm = TRUE)
+maxIndex.steps <- with(interval.steps, which.max(steps))
+```
+```{r plot2}
+with(interval.steps, plot(interval, steps, type = "l", xlab = "interval - 5 minutes",
+                          ylab = "average across all days",
+                          main = "Average number of steps per intervals"))
+```
 
-
+Maximum number of steps of 5-minute interval, on average across all the days
+```{r maxStepsInterval}
+maxInterSteps <- interval.steps[maxIndex.steps, "interval"]
+maxInterSteps
+```
 
 ## Imputing missing values
 
